--- a/css/style.css
+++ b/css/style.css
@@ -409,6 +409,10 @@ body {
     font-style: normal;
     font-size: 16px;
 }
+.button:hover{
+    background-color: #b81212;
+    color: #FFFFFF;
+}
 
 .dollor {
     font-family: "Roboto", serif;
